# pyForwardFolding

./: LICENSE  README.md  cspell.json  pyproject.toml  pytest.ini
.github/instructions/: instructions.md
.github/workflows/: ci.yml
examples/: Global_Fit.ipynb  Global_Fit_config.yaml  Global_Fit_config_reduced.yaml  event_clustering.ipynb  example.ipynb  example_ARCA21_simplified.ipynb  test.yaml  test_ARCA21.yaml  test_relaxed.yaml  toy_analysis.ipynb
pyForwardFolding/: __init__.py  analysis.py  backend.py  binned_expectation.py  binned_factor.py  binning.py  buffers.py  clustering.py  config.py  factor.py  likelihood.py  minimizer.py  model.py  model_component.py  statistics.py
tests/: test_advanced_factors.py  test_analysis.py  test_backend.py  test_backend_enhanced.py  test_binned_expectation.py  test_binning.py  test_buffers.py  test_clustering.py  test_clustering_fixed.py  test_config.py  test_data.py  test_factor.py  test_likelihood.py  test_minimizer.py  test_model.py  test_statistics.py  test_version.py
