[build-system]
build-backend = "hatchling.build"
requires = ["hatchling<1.22"]

[project]
authors = [{ email = "you@example.com", name = "Your Name" }]
classifiers = [
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "jax>=0.5",
  "pandas>=2.2",
  "pyArrow>=19",
  "pyyaml>=6.0",
  "iminuit>=2.31",
  "scikit-learn>=1.6"

]
description = "Your project description here."
dynamic = ["version"]
license = "MIT"
name = "pyForwardFolding"
readme = "README.md"
requires-python = ">=3.10,<4"

[project.optional-dependencies]
checks = [
  "mypy==1.9.0",
  "ruff>=0.11",
]
docs = [
  "mkdocs-material>=9,<10",
]
tests = [
  "coverage[toml]>=7,<8",
  "pytest>=7,<8",
  "pytest-mock>=3,<4",
]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "pragma: no cover"]
fail_under = 70
show_missing = true

[tool.coverage.run]
command_line = "-m pytest"
source = ["pyForwardFolding", "tests"]

[tool.hatch.build.targets.sdist]
include = ["/pyForwardFolding"]

[tool.hatch.build.targets.wheel]
packages = ["pyForwardFolding"]

[tool.hatch.envs.ci]
dev-mode = false
features = [
  "checks",
  "tests",
]
path = ".venv"

[tool.hatch.envs.default]
dev-mode = true
features = [
  "checks",
  "docs",
  "tests",
]
path = ".venv"
python = "3.12"
dependencies = [
  "ipykernel",
  "pandas",
  "matplotlib",
  "seaborn",
  "flax",
  "optax",
  "tqdm",
  "ipywidgets"
]

[tool.hatch.envs.default.scripts]
check = [
  "ruff check",
  "ruff format --check",
  "mypy",
  "npx -s -y prettier@'^2' . --check",
  "npx -s -y cspell --dot --gitignore *.md **/*.md",
]
format = [
  "ruff check --fix",
  "ruff format",
  "npx -s -y prettier@'^2' . --write",
]

[tool.hatch.envs.production]
dev-mode = false
features = []
path = ".venv"

[tool.hatch.version]
path = "pyForwardFolding/__init__.py"

[tool.mypy]
files = ["**/*.py"]
show_error_codes = true
strict = true

[tool.pytest.ini_options]
addopts = "-q"
minversion = "6.0"
testpaths = ["tests"]

[tool.ruff]
src = ["pyForwardFolding", "tests"]
extend-exclude = ["examples"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["pyForwardFolding", "tests"]
